<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speed Button</string>
    <string name="welcome_screen">Welcome to Speed Button!</string>
    <string name="start_game">Start New Game</string>
    <string name="time_trial">Time Trial</string>
    <string name="race">Race</string>
    <string name="crazy_mode">Dont Touch the Black</string>
    <string name="arcade">Arcade</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_timed_mode">timed_mode</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_race_mode">race_mode</string>
    <string name="title_activity_arcade_mode">arcade_mode</string>
    <string name="p2_race">2 Player Race</string>
    <string name="p2_time">2 Player Time Trial</string>
    <string name="title_activity_show_score">Score</string>
    <string name="title_activity_crazy_mode">Crazy</string>
</resources>
