<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:screenOrientation="portrait">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_screen"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/time_trial"
        android:textColor="#ffffff"
        android:id="@+id/button1"
        android:background="@drawable/round_button"
        android:onClick="startTimedGame"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/start_game"
        android:textColor="#ffffff"
        android:id="@+id/button2"
        android:background="@drawable/round_button"
        android:onClick=""
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button3" />


    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/arcade"
        android:textColor="#ffffff"
        android:id="@+id/button3"
        android:background="@drawable/round_button"
        android:onClick="startArcadeGame"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/start_game"
        android:textColor="#ffffff"
        android:id="@+id/button4"
        android:background="@drawable/round_button"
        android:onClick=""
        android:layout_alignTop="@+id/button2"
        android:layout_alignStart="@+id/button5" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/start_game"
        android:textColor="#ffffff"
        android:id="@+id/button5"
        android:background="@drawable/round_button"
        android:onClick=""
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button6" />


    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/race"
        android:textColor="#ffffff"
        android:id="@+id/button6"
        android:background="@drawable/round_button"
        android:onClick="startRaceGame"
        android:layout_alignTop="@+id/button1"
        android:layout_alignEnd="@+id/textView" />

</RelativeLayout>
